[Add] 5 chapt doc

--- a/Linux Mod/4. Общие сведения.md
+++ b/Linux Mod/4. Общие сведения.md
@@ -217,6 +217,19 @@ MODULE_LICENSE("GPL");
 ```
 Здесь мы вручную задаем мажорный номер (240) и минорный номер (0). Команда `register_chrdev_region()` регистрирует пару мажорного и минорного номеров для устройства, и ядро будет использовать эти номера для связывания устройства с соответствующим драйвером.
 
+Для хранения номеров устройств, обоих, старшего и младшего, в ядре используется тип dev_t (определённый в `<linux/types.h>`). Начиная с версии ядра 2.6.0, `dev_t` является 32-х разрядным, 12 бит отведены для старшего номера и 20 - для младшего. Ваш код, конечно, никогда не должен делать никаких предположений о внутренней организации номеров устройств; наоборот, он должен использовать набор макросов, находящихся в `<linux/kdev_t.h>`. Для получения старшей или младшей части dev_t используйте: 
+
+```C
+MAJOR(dev_t dev); 
+MINOR(dev_t dev); 
+```
+
+Наоборот, если у вас есть старший и младший номера и необходимость превратить их в dev_t, используйте: 
+
+```C
+MKDEV(int major, int minor);
+```
+
 Важные замечания:
 	- Если вы хотите избежать конфликта с уже зарегистрированными номерами, можно использовать `register_chrdev()` вместо `register_chrdev_region()` для динамического назначения мажорного номера.
 	- Для проверки сообщений, можно использовать команду `dmesg`, чтобы увидеть вывод, который будет появляться при загрузке и выгрузке модуля.
